Refactor ice monitoring notebook to reset execution counts and outputs for cleaner state. Updated time range for Sentinel-2 item search and streamlined valid item filtering logic.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -11,7 +11,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import geopandas as gpd\n",
         "import numpy as np\n",
@@ -34,9 +36,7 @@
         "# Suppress pystac deprecation warnings (we handle deprecated items manually)\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")\n",
         "warnings.filterwarnings(\"ignore\", message=\".*is deprecated.*\", module=\"pystac\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -48,7 +48,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# Load seeds\n",
         "seeds_gdf = gpd.read_file(\"data/Iceland_Seeds.geojson\")\n",
@@ -89,9 +91,7 @@
         "y_slice = slice(north_utm, south_utm)\n",
         "\n",
         "print(f\"UTM Bounds ({target_crs}): West={west_utm}, South={south_utm}, East={east_utm}, North={north_utm}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,14 +105,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# STAC Search\n",
         "catalog = pystac_client.Client.open(\"https://stac.core.eopf.eodc.eu\")\n",
         "\n",
         "# Search for Sentinel-2 L2A items\n",
         "# Adjust date range as needed.\n",
-        "time_range_str = \"2025-09-01/2025-09-30\"\n",
+        "time_range_str = \"2025-09-01/2025-09-03\"\n",
         "\n",
         "print(f\"Searching STAC for {time_range_str} over AOI...\")\n",
         "search = catalog.search(\n",
@@ -122,242 +124,22 @@
         ")\n",
         "\n",
         "items = list(search.items())\n",
-        "print(f\"Found {len(items)} total items.\")\n",
+        "print(f\"Found {len(items)} items.\")\n",
         "\n",
-        "# Separate deprecated and valid items\n",
-        "deprecated_items = []\n",
-        "valid_items = []\n",
+        "# Filter: only non-deprecated items with 'product' asset\n",
+        "valid_items = [\n",
+        "    item for item in items \n",
+        "    if not item.properties.get(\"deprecated\", False) and \"product\" in item.assets\n",
+        "]\n",
+        "print(f\"Valid items with product asset: {len(valid_items)}\")\n",
         "\n",
-        "for item in items:\n",
-        "    if item.properties.get(\"deprecated\", False):\n",
-        "        deprecated_items.append(item)\n",
-        "    else:\n",
-        "        valid_items.append(item)\n",
+        "# Get hrefs for file-based processing (one scene at a time)\n",
+        "hrefs = [item.assets[\"product\"].href for item in valid_items]\n",
         "\n",
-        "print(f\"  - Valid items: {len(valid_items)}\")\n",
-        "print(f\"  - Deprecated items: {len(deprecated_items)}\")\n",
-        "\n",
-        "# Try to find newer versions for deprecated items via 'superseded-by' link\n",
-        "replacement_items = []\n",
-        "for dep_item in deprecated_items:\n",
-        "    # Look for 'superseded-by' link\n",
-        "    superseded_by_link = next(\n",
-        "        (link for link in dep_item.links if link.rel == \"superseded-by\"), \n",
-        "        None\n",
-        "    )\n",
-        "    if superseded_by_link:\n",
-        "        try:\n",
-        "            # Fetch the replacement item from the catalog\n",
-        "            replacement = catalog.get_collection(dep_item.collection_id).get_item(\n",
-        "                superseded_by_link.target.split(\"/\")[-1]\n",
-        "            ) if hasattr(superseded_by_link, 'target') else None\n",
-        "            \n",
-        "            # Alternative: directly fetch via href if available\n",
-        "            if replacement is None and superseded_by_link.href:\n",
-        "                resp = requests.get(superseded_by_link.href)\n",
-        "                if resp.status_code == 200:\n",
-        "                    replacement = Item.from_dict(resp.json())\n",
-        "                    \n",
-        "            if replacement and not replacement.properties.get(\"deprecated\", False):\n",
-        "                replacement_items.append(replacement)\n",
-        "                print(f\"  Found replacement for {dep_item.id}: {replacement.id}\")\n",
-        "            else:\n",
-        "                print(f\"  No valid replacement found for {dep_item.id}\")\n",
-        "        except Exception as e:\n",
-        "            print(f\"  Could not fetch replacement for {dep_item.id}: {e}\")\n",
-        "    else:\n",
-        "        print(f\"  No 'superseded-by' link for deprecated item: {dep_item.id}\")\n",
-        "\n",
-        "# Combine valid items with replacements\n",
-        "final_items = valid_items + replacement_items\n",
-        "print(f\"\\nUsing {len(final_items)} items after resolving deprecations.\")\n",
-        "\n",
-        "# Filter items that have the 'product' asset to avoid KeyErrors\n",
-        "hrefs_raw = [item.assets[\"product\"].href for item in final_items if \"product\" in item.assets]\n",
-        "\n",
-        "# Validate hrefs by checking if the Zarr store is accessible\n",
-        "# We check for .zgroup file which should exist at the root of any Zarr store\n",
-        "def validate_href(href):\n",
-        "    \"\"\"Check if a Zarr store is accessible by probing for .zgroup or .zmetadata.\"\"\"\n",
-        "    try:\n",
-        "        # Try .zgroup first (always present in Zarr v2)\n",
-        "        test_url = href.rstrip(\"/\") + \"/.zgroup\"\n",
-        "        resp = requests.head(test_url, timeout=5)\n",
-        "        if resp.status_code == 200:\n",
-        "            return href\n",
-        "        # Fallback to .zmetadata (consolidated metadata)\n",
-        "        test_url = href.rstrip(\"/\") + \"/.zmetadata\"\n",
-        "        resp = requests.head(test_url, timeout=5)\n",
-        "        if resp.status_code == 200:\n",
-        "            return href\n",
-        "    except Exception:\n",
-        "        pass\n",
-        "    return None\n",
-        "\n",
-        "print(f\"Validating {len(hrefs_raw)} hrefs in parallel (this may take a moment)...\")\n",
-        "hrefs = []\n",
-        "invalid_count = 0\n",
-        "\n",
-        "# Use ThreadPoolExecutor for parallel validation (much faster for many items)\n",
-        "with ThreadPoolExecutor(max_workers=20) as executor:\n",
-        "    futures = {executor.submit(validate_href, href): href for href in hrefs_raw}\n",
-        "    for future in as_completed(futures):\n",
-        "        result = future.result()\n",
-        "        if result:\n",
-        "            hrefs.append(result)\n",
-        "        else:\n",
-        "            invalid_count += 1\n",
-        "\n",
-        "print(f\"  - Valid hrefs: {len(hrefs)}\")\n",
-        "print(f\"  - Invalid/inaccessible hrefs: {invalid_count}\")\n",
-        "\n",
-        "# Group valid hrefs by tile ID to avoid coordinate conflicts\n",
-        "# Sentinel-2 tile ID is typically in position 5 of the filename (e.g., T27WVP)\n",
-        "def extract_tile_id(href):\n",
-        "    \"\"\"Extract tile ID from Sentinel-2 product href.\"\"\"\n",
-        "    basename = os.path.basename(href.rstrip(\"/\"))\n",
-        "    parts = basename.split(\"_\")\n",
-        "    # Find the part that looks like a tile ID (starts with T followed by digits/letters)\n",
-        "    for part in parts:\n",
-        "        if part.startswith(\"T\") and len(part) == 6:\n",
-        "            return part\n",
-        "    return \"unknown\"\n",
-        "\n",
-        "# Group hrefs by tile\n",
-        "hrefs_by_tile = {}\n",
-        "for href in hrefs:\n",
-        "    tile_id = extract_tile_id(href)\n",
-        "    if tile_id not in hrefs_by_tile:\n",
-        "        hrefs_by_tile[tile_id] = []\n",
-        "    hrefs_by_tile[tile_id].append(href)\n",
-        "\n",
-        "print(f\"\\nData grouped by {len(hrefs_by_tile)} tiles:\")\n",
-        "for tile_id, tile_hrefs in sorted(hrefs_by_tile.items(), key=lambda x: -len(x[1])):\n",
-        "    print(f\"  {tile_id}: {len(tile_hrefs)} scenes\")\n",
-        "\n",
-        "# Select the tile with the most scenes for processing\n",
-        "selected_tile = max(hrefs_by_tile.keys(), key=lambda t: len(hrefs_by_tile[t]))\n",
-        "hrefs = hrefs_by_tile[selected_tile]\n",
-        "print(f\"\\nSelected tile {selected_tile} with {len(hrefs)} scenes for processing.\")\n",
-        "\n",
-        "if len(final_items) > 0:\n",
-        "    print(f\"First item: {final_items[0].id}\")\n",
-        "\n",
-        "# Function to extract time from filename (as per example)\n",
-        "def extract_time(ds):\n",
-        "    date_format = \"%Y%m%dT%H%M%S\"\n",
-        "    try:\n",
-        "        filename = ds.encoding[\"source\"]\n",
-        "        # The example splits by \"_\" and takes index 2. \n",
-        "        # Typical EOPF Zarr name: S2A_MSIL2A_20200131T105251_...\n",
-        "        # We need to ensure we parse the correct part.\n",
-        "        basename = os.path.basename(filename)\n",
-        "        parts = basename.split(\"_\")\n",
-        "        # Look for the date string part (starts with 20...)\n",
-        "        date_str = next((p for p in parts if p.startswith(\"20\") and \"T\" in p), None)\n",
-        "        \n",
-        "        if date_str:\n",
-        "             # Remove fractional seconds if present or other suffixes\n",
-        "             date_str = date_str.split(\".\")[0] \n",
-        "             time = datetime.strptime(date_str, date_format)\n",
-        "             # Use expand_dims to ensure time is treated as a dimension, not just a scalar coordinate\n",
-        "             return ds.expand_dims(time=[time])\n",
-        "    except Exception as e:\n",
-        "        pass\n",
-        "    \n",
-        "    # Fallback/Default if extraction fails\n",
-        "    return ds\n",
-        "\n",
-        "if not hrefs:\n",
-        "    print(\"No items found. Skipping data loading.\")\n",
-        "else:\n",
-        "    print(\"Loading data via xarray (Lazy)...\")\n",
-        "    \n",
-        "    # We need B03 (Green) and B11 (SWIR) for NDSI (Snow).\n",
-        "    # B03 is usually in r10m, B11 in r20m.\n",
-        "    \n",
-        "    try:\n",
-        "        # Load Green Band (B03) - 10m\n",
-        "        ds_b03 = xr.open_mfdataset(\n",
-        "            hrefs,\n",
-        "            engine=\"zarr\",\n",
-        "            chunks={},\n",
-        "            group=\"/measurements/reflectance/r10m\",\n",
-        "            concat_dim=\"time\",\n",
-        "            combine=\"nested\",\n",
-        "            preprocess=extract_time,\n",
-        "            mask_and_scale=True,\n",
-        "        )[[\"b03\"]].sel(x=x_slice, y=y_slice)\n",
-        "\n",
-        "        # Load SWIR Band (B11) - 20m\n",
-        "        ds_b11 = xr.open_mfdataset(\n",
-        "            hrefs,\n",
-        "            engine=\"zarr\",\n",
-        "            chunks={},\n",
-        "            group=\"/measurements/reflectance/r20m\",\n",
-        "            concat_dim=\"time\",\n",
-        "            combine=\"nested\",\n",
-        "            preprocess=extract_time,\n",
-        "            mask_and_scale=True,\n",
-        "        )[[\"b11\"]].sel(x=x_slice, y=y_slice)\n",
-        "\n",
-        "        # Load SCL - 20m\n",
-        "        ds_scl = xr.open_mfdataset(\n",
-        "            hrefs,\n",
-        "            engine=\"zarr\",\n",
-        "            chunks={},\n",
-        "            group=\"/conditions/mask/l2a_classification/r20m\",\n",
-        "            concat_dim=\"time\",\n",
-        "            combine=\"nested\",\n",
-        "            preprocess=extract_time,\n",
-        "            mask_and_scale=True,\n",
-        "        )[[\"scl\"]].sel(x=x_slice, y=y_slice)\n",
-        "\n",
-        "        # Align grids: Resample 20m bands to 10m (B03 grid)\n",
-        "        print(\"Resampling to common 10m grid...\")\n",
-        "        ds_b11_interp = ds_b11.interp_like(ds_b03, method=\"nearest\")\n",
-        "        ds_scl_interp = ds_scl.interp_like(ds_b03, method=\"nearest\")\n",
-        "\n",
-        "        # Merge into single DataCube\n",
-        "        datacube = xr.merge([ds_b03, ds_b11_interp, ds_scl_interp])\n",
-        "        \n",
-        "        # Sort by time\n",
-        "        datacube = datacube.sortby(\"time\")\n",
-        "        \n",
-        "        print(\"DataCube created:\")\n",
-        "        print(datacube)\n",
-        "        \n",
-        "        # Compute NDSI and statistics\n",
-        "        # We process it in memory if small enough, or keep lazy.\n",
-        "        # Given the \"Simulate Native\" comment in previous code, let's process one time step as demo or all.\n",
-        "        \n",
-        "        # NDSI Calculation\n",
-        "        green = datacube[\"b03\"]\n",
-        "        swir = datacube[\"b11\"]\n",
-        "        scl = datacube[\"scl\"]\n",
-        "        \n",
-        "        # NDSI\n",
-        "        denom = (green + swir)\n",
-        "        ndsi = (green - swir) / denom.where(denom != 0)\n",
-        "        \n",
-        "        # SCL Mask (Keep Snow(11) or clear pixels if needed, or just exclude clouds/shadows)\n",
-        "        # 3: Cloud Shadows, 8: Cloud Medium, 9: Cloud High\n",
-        "        valid_mask = ~scl.isin([3, 8, 9])\n",
-        "        \n",
-        "        # Simple Snow Map\n",
-        "        snow_map = (ndsi > 0.42) & valid_mask\n",
-        "        \n",
-        "        # Trigger computation for the first time step to verify\n",
-        "        if datacube.time.size > 0:\n",
-        "            print(\"Computing first time step...\")\n",
-        "            snow_map_first = snow_map.isel(time=0).compute()\n",
-        "            print(f\"Snow pixels in first scene: {snow_map_first.sum().item()}\")\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error creating datacube: {e}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "if hrefs:\n",
+        "    print(f\"\\nFirst scene: {os.path.basename(hrefs[0])}\")\n",
+        "    print(f\"Total scenes to process: {len(hrefs)}\")"
+      ]
     }
   ],
   "metadata": {
