removed lines for manual error handling

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -31,11 +31,7 @@
         "from pyproj import Transformer\n",
         "import dask\n",
         "import warnings\n",
-        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-        "\n",
-        "# Suppress pystac deprecation warnings (we handle deprecated items manually)\n",
-        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"pystac\")\n",
-        "warnings.filterwarnings(\"ignore\", message=\".*is deprecated.*\", module=\"pystac\")"
+        "from concurrent.futures import ThreadPoolExecutor, as_completed"
       ]
     },
     {
