Add visualization for stacked scene composite and NDSI results in ice monitoring notebook

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -264,6 +264,135 @@
         "else:\n",
         "    print(\"No scenes to process.\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Visualization: Stacked Scene Composite\n",
+        "\n",
+        "Stack all processed scenes and compute median NDSI and aggregated snow mask for robust visualization."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ======================================================================\n",
+        "# Stack Results and Compute Composite\n",
+        "# ======================================================================\n",
+        "# Combines all processed scenes into a single composite using median/mean\n",
+        "\n",
+        "NDSI_THRESHOLD = 0.42  # Standard snow threshold\n",
+        "\n",
+        "def create_stacked_composite(results):\n",
+        "    \"\"\"\n",
+        "    Stack all scene results and compute composite metrics.\n",
+        "    - Median NDSI (robust against outliers/clouds)\n",
+        "    - Aggregated snow mask (snow if detected in majority of valid scenes)\n",
+        "    \"\"\"\n",
+        "    if not results:\n",
+        "        return None\n",
+        "    \n",
+        "    scene_count = len(results)\n",
+        "    print(f\"Stacking {scene_count} scene(s)...\")\n",
+        "    \n",
+        "    if scene_count == 1:\n",
+        "        # Single scene: use directly\n",
+        "        ndsi_median = results[0][\"ndsi\"]\n",
+        "        snow_mask = results[0][\"snow_mask\"]\n",
+        "        valid_mask = results[0][\"valid_mask\"]\n",
+        "    else:\n",
+        "        # Multiple scenes: stack along new dimension and compute median\n",
+        "        ndsi_stack = xr.concat([r[\"ndsi\"] for r in results], dim=\"scene\")\n",
+        "        valid_stack = xr.concat([r[\"valid_mask\"] for r in results], dim=\"scene\")\n",
+        "        snow_stack = xr.concat([r[\"snow_mask\"] for r in results], dim=\"scene\")\n",
+        "        \n",
+        "        # Median NDSI (ignoring NaN)\n",
+        "        ndsi_median = ndsi_stack.median(dim=\"scene\", skipna=True)\n",
+        "        \n",
+        "        # Valid mask: pixel valid in at least one scene\n",
+        "        valid_mask = valid_stack.any(dim=\"scene\")\n",
+        "        \n",
+        "        # Snow mask from median NDSI\n",
+        "        snow_mask = (ndsi_median > NDSI_THRESHOLD) & valid_mask\n",
+        "    \n",
+        "    # Calculate statistics\n",
+        "    total_pixels = valid_mask.size\n",
+        "    valid_pixels = valid_mask.sum().item()\n",
+        "    snow_pixels = snow_mask.sum().item()\n",
+        "    snow_percentage = (snow_pixels / valid_pixels * 100) if valid_pixels > 0 else 0\n",
+        "    \n",
+        "    print(f\"  → Total pixels: {total_pixels:,}\")\n",
+        "    print(f\"  → Valid pixels: {valid_pixels:,}\")\n",
+        "    print(f\"  → Snow pixels: {snow_pixels:,} ({snow_percentage:.1f}%)\")\n",
+        "    \n",
+        "    return {\n",
+        "        \"ndsi_median\": ndsi_median,\n",
+        "        \"snow_mask\": snow_mask,\n",
+        "        \"valid_mask\": valid_mask,\n",
+        "        \"scene_count\": scene_count,\n",
+        "        \"snow_percentage\": snow_percentage\n",
+        "    }\n",
+        "\n",
+        "\n",
+        "# Create composite from results\n",
+        "if 'results' in dir() and results:\n",
+        "    composite = create_stacked_composite(results)\n",
+        "else:\n",
+        "    composite = None\n",
+        "    print(\"No results available. Run processing cell first.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ======================================================================\n",
+        "# Visualization: NDSI and Snow/Ice Classification Results\n",
+        "# ======================================================================\n",
+        "# Creates a 2-panel diagnostic plot:\n",
+        "# 1. Median NDSI map (spectral snow index)\n",
+        "# 2. Binary snow/ice mask (pixels where NDSI >= threshold)\n",
+        "\n",
+        "if composite:\n",
+        "    fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+        "    \n",
+        "    # ----- Plot 1: Median NDSI -----\n",
+        "    ndsi_data = composite['ndsi_median'].values\n",
+        "    im1 = axes[0].imshow(ndsi_data, cmap='RdYlGn', vmin=-0.5, vmax=1.0)\n",
+        "    axes[0].set_title(f'Median NDSI\\n(from {composite[\"scene_count\"]} scene(s))', \n",
+        "                      fontsize=12, fontweight='bold')\n",
+        "    axes[0].set_xlabel('Pixel X')\n",
+        "    axes[0].set_ylabel('Pixel Y')\n",
+        "    plt.colorbar(im1, ax=axes[0], label='NDSI', shrink=0.8)\n",
+        "    \n",
+        "    # ----- Plot 2: Snow/Ice Mask -----\n",
+        "    snow_data = composite['snow_mask'].values.astype(float)\n",
+        "    im2 = axes[1].imshow(snow_data, cmap='Blues', vmin=0, vmax=1)\n",
+        "    axes[1].set_title(f'Snow/Ice Mask\\n(NDSI >= {NDSI_THRESHOLD})', \n",
+        "                      fontsize=12, fontweight='bold')\n",
+        "    axes[1].set_xlabel('Pixel X')\n",
+        "    axes[1].set_ylabel('Pixel Y')\n",
+        "    \n",
+        "    # Add percentage annotation\n",
+        "    axes[1].text(0.5, 0.95, f'{composite[\"snow_percentage\"]:.1f}% Snow Coverage', \n",
+        "                 transform=axes[1].transAxes, ha='center', va='top', fontsize=11, \n",
+        "                 bbox=dict(boxstyle='round', facecolor='lightblue', alpha=0.8))\n",
+        "    \n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "    \n",
+        "    print(f\"\\n✓ Visualization complete\")\n",
+        "    print(f\"  Scenes processed: {composite['scene_count']}\")\n",
+        "    print(f\"  Snow coverage: {composite['snow_percentage']:.1f}%\")\n",
+        "else:\n",
+        "    print(\"No composite available. Run stacking cell first.\")"
+      ]
     }
   ],
   "metadata": {
