Add RGB visualization and processing to ice monitoring notebook

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -177,7 +177,7 @@
         "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r20m\")[[\"scl\"]]\n",
         "    ds_scl = ds_scl.sel(x=x_slice, y=y_slice)\n",
         "    \n",
-        "    # Resample 20m bands to 10m grid (align to B03)\n",
+        "    # Resample 20m bands to 10m grid\n",
         "    ds_b11_interp = ds_b11.interp_like(ds_b03, method=\"nearest\")\n",
         "    ds_scl_interp = ds_scl.interp_like(ds_b03, method=\"nearest\")\n",
         "    \n",
@@ -217,7 +217,7 @@
         "    return xr.Dataset({\n",
         "        \"ndsi\": ndsi,\n",
         "        \"snow_mask\": snow_mask,\n",
-        "        \"valid_mask\": valid_mask\n",
+        "        \"valid_mask\": valid_mask,\n",
         "    }, attrs=scene_data.attrs)\n",
         "\n",
         "\n",
@@ -308,7 +308,6 @@
         "        # Multiple scenes: stack along new dimension and compute median\n",
         "        ndsi_stack = xr.concat([r[\"ndsi\"] for r in results], dim=\"scene\")\n",
         "        valid_stack = xr.concat([r[\"valid_mask\"] for r in results], dim=\"scene\")\n",
-        "        snow_stack = xr.concat([r[\"snow_mask\"] for r in results], dim=\"scene\")\n",
         "        \n",
         "        # Median NDSI (ignoring NaN)\n",
         "        ndsi_median = ndsi_stack.median(dim=\"scene\", skipna=True)\n",
@@ -392,6 +391,158 @@
         "    print(f\"  Snow coverage: {composite['snow_percentage']:.1f}%\")\n",
         "else:\n",
         "    print(\"No composite available. Run stacking cell first.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## RGB Visualization (Separate Processing)\n",
+        "\n",
+        "This section loads RGB bands independently from the NDSI processing to avoid data interference."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ======================================================================\n",
+        "# RGB Processing - Separate from NDSI\n",
+        "# ======================================================================\n",
+        "# Loads RGB bands independently and creates median composite\n",
+        "\n",
+        "def load_rgb_scene(href, x_slice, y_slice):\n",
+        "    \"\"\"\n",
+        "    Load RGB bands (B02, B03, B04) for a single scene.\n",
+        "    Completely independent from NDSI processing.\n",
+        "    \"\"\"\n",
+        "    scene_name = os.path.basename(href.rstrip(\"/\"))\n",
+        "    \n",
+        "    # Load 10m RGB bands\n",
+        "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r10m\")[[\"b02\", \"b03\", \"b04\"]]\n",
+        "    ds_rgb = ds_rgb.sel(x=x_slice, y=y_slice)\n",
+        "    \n",
+        "    # Load SCL for cloud masking\n",
+        "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r20m\")[[\"scl\"]]\n",
+        "    ds_scl = ds_scl.sel(x=x_slice, y=y_slice)\n",
+        "    ds_scl = ds_scl.interp_like(ds_rgb, method=\"nearest\")\n",
+        "    \n",
+        "    return xr.merge([ds_rgb, ds_scl])\n",
+        "\n",
+        "\n",
+        "def create_rgb_composite(hrefs, x_slice, y_slice):\n",
+        "    \"\"\"\n",
+        "    Create median RGB composite from all scenes.\n",
+        "    \"\"\"\n",
+        "    print(f\"Loading RGB data from {len(hrefs)} scene(s)...\")\n",
+        "    \n",
+        "    rgb_scenes = []\n",
+        "    for i, href in enumerate(hrefs):\n",
+        "        try:\n",
+        "            scene = load_rgb_scene(href, x_slice, y_slice)\n",
+        "            \n",
+        "            # Apply cloud mask\n",
+        "            valid = ~scene[\"scl\"].isin([3, 8, 9])\n",
+        "            scene[\"b02\"] = scene[\"b02\"].where(valid)\n",
+        "            scene[\"b03\"] = scene[\"b03\"].where(valid)\n",
+        "            scene[\"b04\"] = scene[\"b04\"].where(valid)\n",
+        "            \n",
+        "            rgb_scenes.append(scene.compute())\n",
+        "            print(f\"  [{i+1}/{len(hrefs)}] Loaded: {os.path.basename(href)}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"  [{i+1}/{len(hrefs)}] Error: {e}\")\n",
+        "            continue\n",
+        "    \n",
+        "    if not rgb_scenes:\n",
+        "        return None\n",
+        "    \n",
+        "    if len(rgb_scenes) == 1:\n",
+        "        # Single scene\n",
+        "        rgb_median = xr.concat([\n",
+        "            rgb_scenes[0][\"b04\"],\n",
+        "            rgb_scenes[0][\"b03\"],\n",
+        "            rgb_scenes[0][\"b02\"],\n",
+        "        ], dim=\"band\").assign_coords(band=[\"R\", \"G\", \"B\"])\n",
+        "    else:\n",
+        "        # Stack and compute median\n",
+        "        r_stack = xr.concat([s[\"b04\"] for s in rgb_scenes], dim=\"scene\")\n",
+        "        g_stack = xr.concat([s[\"b03\"] for s in rgb_scenes], dim=\"scene\")\n",
+        "        b_stack = xr.concat([s[\"b02\"] for s in rgb_scenes], dim=\"scene\")\n",
+        "        \n",
+        "        rgb_median = xr.concat([\n",
+        "            r_stack.median(dim=\"scene\", skipna=True),\n",
+        "            g_stack.median(dim=\"scene\", skipna=True),\n",
+        "            b_stack.median(dim=\"scene\", skipna=True),\n",
+        "        ], dim=\"band\").assign_coords(band=[\"R\", \"G\", \"B\"])\n",
+        "    \n",
+        "    print(f\"✓ RGB composite created from {len(rgb_scenes)} scene(s)\")\n",
+        "    return {\"rgb_median\": rgb_median, \"scene_count\": len(rgb_scenes)}\n",
+        "\n",
+        "\n",
+        "# Create RGB composite (independent from NDSI)\n",
+        "if hrefs:\n",
+        "    rgb_composite = create_rgb_composite(hrefs, x_slice, y_slice)\n",
+        "else:\n",
+        "    rgb_composite = None\n",
+        "    print(\"No scenes available for RGB processing.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ======================================================================\n",
+        "# Visualization: Median RGB vs Snow/Ice Mask\n",
+        "# ======================================================================\n",
+        "# Uses independently loaded RGB data\n",
+        "\n",
+        "if rgb_composite and composite:\n",
+        "    # Prepare RGB composite\n",
+        "    rgb_da = rgb_composite['rgb_median']\n",
+        "    rgb_np = np.stack([\n",
+        "        rgb_da.sel(band=\"R\").values,\n",
+        "        rgb_da.sel(band=\"G\").values,\n",
+        "        rgb_da.sel(band=\"B\").values\n",
+        "    ], axis=-1)\n",
+        "    \n",
+        "    # Stretch RGB for visualization (2-98 percentile stretch)\n",
+        "    valid_vals = rgb_np[np.isfinite(rgb_np)]\n",
+        "    if valid_vals.size > 0:\n",
+        "        low, high = np.nanpercentile(valid_vals, [2, 98])\n",
+        "        rgb_stretched = (rgb_np - low) / (high - low + 1e-6)\n",
+        "        rgb_stretched = np.clip(rgb_stretched, 0, 1)\n",
+        "        rgb_stretched = np.nan_to_num(rgb_stretched, nan=0.0)\n",
+        "        \n",
+        "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+        "        \n",
+        "        # ----- Plot 1: RGB Composite -----\n",
+        "        axes[0].imshow(rgb_stretched)\n",
+        "        axes[0].set_title(f\"Median RGB Composite\\n(from {rgb_composite['scene_count']} scene(s))\", \n",
+        "                         fontsize=12, fontweight='bold')\n",
+        "        axes[0].axis('off')\n",
+        "        \n",
+        "        # ----- Plot 2: Snow/Ice Mask -----\n",
+        "        snow_data = composite['snow_mask'].values.astype(float)\n",
+        "        axes[1].imshow(snow_data, cmap='Blues', vmin=0, vmax=1)\n",
+        "        axes[1].set_title(f\"Snow/Ice Mask\\n(NDSI >= {NDSI_THRESHOLD})\", \n",
+        "                         fontsize=12, fontweight='bold')\n",
+        "        axes[1].axis('off')\n",
+        "        \n",
+        "        # Add percentage annotation\n",
+        "        axes[1].text(0.5, -0.05, f\"{composite['snow_percentage']:.1f}% Snow Coverage\",\n",
+        "                     transform=axes[1].transAxes, ha='center', fontsize=11,\n",
+        "                     bbox=dict(boxstyle='round', facecolor='lightblue', alpha=0.8))\n",
+        "        \n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "    else:\n",
+        "        print(\"RGB composite is empty after masking.\")\n",
+        "else:\n",
+        "    print(\"RGB or NDSI composite missing. Run processing cells first.\")"
       ]
     }
   ],
