--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -411,23 +411,22 @@
         "# ======================================================================\n",
         "# RGB Processing - Separate from NDSI\n",
         "# ======================================================================\n",
-        "# Loads RGB bands independently and creates median composite\n",
+        "# Loads RGB bands at 20m resolution to reduce memory/container load\n",
         "\n",
         "def load_rgb_scene(href, x_slice, y_slice):\n",
         "    \"\"\"\n",
-        "    Load RGB bands (B02, B03, B04) for a single scene.\n",
-        "    Completely independent from NDSI processing.\n",
+        "    Load RGB bands (B02, B03, B04) at 20m resolution for a single scene.\n",
+        "    Uses 20m bands to reduce data volume and container load.\n",
         "    \"\"\"\n",
         "    scene_name = os.path.basename(href.rstrip(\"/\"))\n",
         "    \n",
-        "    # Load 10m RGB bands\n",
-        "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r10m\")[[\"b02\", \"b03\", \"b04\"]]\n",
+        "    # Load 20m RGB bands (lower resolution = less data)\n",
+        "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r20m\")[[\"b02\", \"b03\", \"b04\"]]\n",
         "    ds_rgb = ds_rgb.sel(x=x_slice, y=y_slice)\n",
         "    \n",
-        "    # Load SCL for cloud masking\n",
+        "    # Load SCL for cloud masking (already 20m)\n",
         "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r20m\")[[\"scl\"]]\n",
         "    ds_scl = ds_scl.sel(x=x_slice, y=y_slice)\n",
-        "    ds_scl = ds_scl.interp_like(ds_rgb, method=\"nearest\")\n",
         "    \n",
         "    return xr.merge([ds_rgb, ds_scl])\n",
         "\n",
